# games

./: .gitignore  Dockerfile  package.json
dark_forest/: package-lock.json  package.json
dark_forest/agent/: .gitignore  README.md  docker-compose.yml  instructions.md  instructions.txt  mcp_agent.config.yaml  package.json  pyproject.toml
dark_forest/agent/src/: index.ts  main.py  utils.py
dark_forest/agent/src/agent/: agent.ts
dark_forest/arena/: netlify.toml  package-lock.json
dark_forest/arena/client/: index.html
dark_forest/contracts/abis/: DFArenaFaucet.json  DFArenaInitialize.json  DarkForest.json  DarkForest_stripped.json
dark_forest/contracts/typechain/: DFAdminFacet.d.ts  DFArenaCoreFacet.d.ts  DFArenaFaucet.d.ts  DFArenaGetterFacet.d.ts  DFArenaInitialize.d.ts  DFArenaTournamentFacet.d.ts  DFArtifactFacet.d.ts  DFCaptureFacet.d.ts  (+30 more)
dark_forest/markets/: package.json
dark_forest/mcp/: .gitignore  README.md  build.js  package-lock.json  package.json  tsconfig.json
dark_forest/network/: .gitignore
dark_forest/snarks/: index.d.ts  index.js  index.js.map
dark_forest/types/: package.json
sputnik/: API_DOCUMENTATION.md  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  server.js
sputnik-agent/: .gitignore  mcp_agent.config.yaml  pyproject.toml
sputnik-agent/src/: main.py  utils.py
sputnik-mcp/: .env.example  .gitignore  README.md  pyproject.toml  run.sh  test.sh
sputnik-mcp/src/sputnik_mcp/: __init__.py  api_client.py  app.py  client.py  example_prompt.md  main.py  test_client.py
sputnik-mcp/src/sputnik_mcp/resources/: __init__.py  spaceship.py
sputnik-mcp/src/sputnik_mcp/tools/: __init__.py  spaceship.py
src/agent/: agent.ts
src/redis/: loop.ts
(+325 files in other folders)
