[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sputnik-agent"
version = "0.1.0"
description = "The first MCP-powered agent in the DARK Games universe."
requires-python = ">=3.11"
dependencies = [
    "mcp-agent",
    "openai",
    "supabase>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"] 